[package]
name = "stratawm"
version = "0.0.1"
edition = "2021"
authors = ["Anant Narayan <anantnrg@gmail.com>"]
license = "GNU GPL v3"
description = "A modular, dynamic and sleek Wayland compositor with batteries included."
readme = "README.md"
homepage = "https://github.com/stratawm/stratawm"
repository = "https://github.com/stratawm/stratawm"
keywords = [
    "smithay",
    "compositor",
    "wayland",
    "linux",
    "linux-utilities",
    "wm",
    "windows",
    "manager",
]
categories = ["linux-utilities"]

[dependencies]
tracing-subscriber = { features = ["env-filter"], version = "0.3.17" }
bitflags = "2.2.1"
colored = "2.0.0"
clap = { version = "4.3.11", features = ["derive"] }
anyhow = "1.0.71"
log = "0.4.19"
tokio = { version = "1.29.1", features = ["full"] }
chrono = "0.4.26"
tracing-appender = "0.2.2"
serde = { version = "1.0.183", features = ["derive"] }
smithay-drm-extras = { git = "https://github.com/Smithay/smithay.git" }
once_cell = "1.18.0"
crossbeam-channel = "0.5.8"
mlua = { version = "0.9.0-rc.2", features = [
    "lua54",
    "vendored",
    "serialize",
    "send",
] }
lazy_static = "1.4.0"

[dependencies.smithay]
default-features = false
git = "https://github.com/smithay/smithay"
version = "0.3"
rev = "c569c8732172137169e95e69bd620f81a8a32f2b"
features = [
    "backend_winit",
    "wayland_frontend",
    "desktop",
    "backend_session_libseat",
    "backend_drm",
    "renderer_multi",
    "renderer_glow",
    "backend_drm",
    "backend_gbm",
    "backend_egl",
    "backend_libinput",
    "backend_session_libseat",
    "backend_udev",
    "backend_winit",
    "backend_vulkan",
    "backend_x11",
    "desktop",
    "use_system_lib",
    "renderer_glow",
    "renderer_multi",
    "wayland_frontend",
    "xwayland",
]
