[package]
name = "strata"
version = "0.0.1"
edition = "2021"
authors = ["Anant Narayan <anantnrg@gmail.com>"]
license = "GNU GPL v3"
description = "A cutting-edge, robust and sleek Wayland compositor with batteries included."
readme = "README.md"
homepage = "https://github.com/stratawm/strata"
repository = "https://github.com/stratawm/strata"
keywords = [
    "smithay",
    "compositor",
    "wayland",
    "linux",
    "linux-utilities",
    "wm",
    "windows",
    "manager",
]
categories = ["linux-utilities"]

[profile.release]
strip = true
opt-level = 3
lto = true
codegen-units = 1

[dependencies]
tracing-subscriber = { features = ["env-filter"], version = "0.3.17" }
bitflags = "2.2.1"
colored = "2.0.0"
clap = { version = "4.3.11", features = ["derive"] }
anyhow = "1.0.71"
log = "0.4.19"
tokio = { version = "1.29.1", features = ["full"] }
chrono = "0.4.26"
tracing-appender = "0.2.2"
smithay-drm-extras = { git = "https://github.com/Smithay/smithay.git" }
once_cell = "1.18.0"
crossbeam-channel = "0.5.8"
mlua = { version = "0.9.0", features = [
    "luajit",
    "vendored",
    "send",
    "macros",
    "parking_lot",
    "async",
] }
lazy_static = "1.4.0"
parking_lot = "0.12.1"
xdg = "2.5.2"
strata-derive = { path = "strata-derive" }
strata-core = { path = "strata-core" }
smart-default = "0.7.1"
strum = { version = "0.25.0", features = ["derive"] }

[dependencies.smithay]
default-features = false
git = "https://github.com/stratawm/smithay"
version = "0.3"
rev = "1a61e1c"
features = [
    "backend_winit",
    "wayland_frontend",
    "desktop",
    "backend_session_libseat",
    "backend_drm",
    "renderer_multi",
    "renderer_glow",
    "backend_drm",
    "backend_gbm",
    "backend_egl",
    "backend_libinput",
    "backend_session_libseat",
    "backend_udev",
    "backend_winit",
    "backend_vulkan",
    "backend_x11",
    "desktop",
    "use_system_lib",
    "renderer_glow",
    "renderer_multi",
    "wayland_frontend",
    "xwayland",
]
