[package]
name = "strata"
version = "0.0.1"
edition = "2021"
authors = ["Anant Narayan <anantnrg@gmail.com>"]
license = "GNU GPL v3"
description = "A cutting-edge, robust and sleek Wayland compositor with batteries included."
readme = "README.md"
homepage = "https://github.com/stratawm/strata"
repository = "https://github.com/stratawm/strata"
keywords = [
    "smithay",
    "compositor",
    "wayland",
    "linux",
    "window-manager",
]

[profile.release]
strip = true
opt-level = 3
lto = true
codegen-units = 1

[dependencies]
tracing-subscriber = { features = ["env-filter"], version = "0.3.18" }
bitflags = "2.4.2"
colored = "2.1.0"
clap = { version = "4.5.1", features = ["derive"] }
anyhow = "1.0.80"
log = "0.4.21"
tokio = { version = "1.36.0", features = ["full"] }
chrono = "0.4.34"
tracing-appender = "0.2.3"
smithay-drm-extras = { git = "https://github.com/stratawm/smithay.git" }
once_cell = "1.19.0"
gc-arena = { version = "0.5.0", features = ["allocator-api2", "hashbrown"] }
piccolo = { git = "https://github.com/kyren/piccolo.git" }
piccolo-util = { git = "https://github.com/kyren/piccolo.git" }
crossbeam-channel = "0.5.12"
parking_lot = "0.12.1"
xdg = "2.5.2"
strata-derive = { path = "strata-derive" }
strata-core = { path = "strata-core" }
smart-default = "0.7.1"
strum = { version = "0.26.1", features = ["derive"] }
xcursor = "0.3.5"
thiserror = "1.0.57"
tracing = "0.1.40"

[dependencies.smithay]
default-features = false
git = "https://github.com/stratawm/smithay"
version = "0.3.0"
rev = "f1e7fc1"
features = [
    "wayland_frontend",
    "renderer_multi",
    "renderer_glow",
    "backend_drm",
    "backend_gbm",
    "backend_egl",
    "backend_libinput",
    "backend_session_libseat",
    "backend_udev",
    "backend_winit",
    "backend_vulkan",
    "backend_x11",
    "desktop",
    "use_system_lib",
    "xwayland",
]
