[package]
name = "strata-derive"
version = "0.1.0"
edition = "2021"

[lib]
proc-macro = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mlua = { version = "0.9.1", features = ["luajit", "vendored"] }
proc-macro2 = "1.0.66"
quote = "1.0.33"
syn = "2.0.29"
